--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <a class="nav-link js-scroll-trigger" href="#about">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#services">Services</a>
+            <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a>
@@ -61,7 +61,9 @@
     <div class="container h-100">
       <div class="row h-100 align-items-center justify-content-center text-center">
         <div class="col-lg-10 align-self-end">
-          <h1 class="text-uppercase text-white font-weight-bold">Physical Oceanographer <br><br> Data Analyst</h1>
+          <h1 class="text-uppercase text-white font-weight-bold">Hydrographic Data Analyst</h1>
+          <hr class="divider my-4">
+          <h1 class="text-uppercase text-white font-weight-bold">Physical Oceanography</h1>
           <hr class="divider my-4">
         </div>
         <div class="col-lg-8 align-self-baseline">
@@ -87,37 +89,37 @@
   </section>
 
   <!-- Services Section -->
-  <section class="page-section" id="services">
+  <section class="page-section" id="Skills">
     <div class="container">
-      <h2 class="text-center mt-0">Skills</h2>
+      <h2 class="text-center mt-0">Technical Skills</h2>
       <hr class="divider my-4">
       <div class="row">
         <div class="col-lg-3 col-md-6 text-center">
           <div class="mt-5">
-            <i class="fas fa-4x fa-gem text-primary mb-4"></i>
+            <i class="fas fa-4x fa-chart-area text-primary mb-4"></i>
             <h3 class="h4 mb-2">Analysis</h3>
-            <p class="text-muted mb-0">Time-series, QA/QC,</p>
+            <p class="text-muted mb-0">Time-series, Spectral, EOFs, Objective Mapping</p>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-6 text-center">
+          <div class="mt-5">
+            <i class="fas fa-4x fa-code text-primary mb-4"></i>
+            <h3 class="h4 mb-2">Coding</h3>
+            <p class="text-muted mb-0">Python, MATLAB, Unix, Git, GitHub, LaTeX</p>
           </div>
         </div>
         <div class="col-lg-3 col-md-6 text-center">
           <div class="mt-5">
             <i class="fas fa-4x fa-laptop-code text-primary mb-4"></i>
-            <h3 class="h4 mb-2">Coding</h3>
-            <p class="text-muted mb-0">Python, MATLAB, Git, Github</p>
+            <h3 class="h4 mb-2">Instrumentation</h3>
+            <p class="text-muted mb-0">Deployment, Troubleshooting, QA/QC</p>
           </div>
         </div>
         <div class="col-lg-3 col-md-6 text-center">
           <div class="mt-5">
-            <i class="fas fa-4x fa-globe text-primary mb-4"></i>
-            <h3 class="h4 mb-2">Ready to Publish</h3>
-            <p class="text-muted mb-0">You can use this design as is, or you can make changes!</p>
-          </div>
-        </div>
-        <div class="col-lg-3 col-md-6 text-center">
-          <div class="mt-5">
-            <i class="fas fa-4x fa-heart text-primary mb-4"></i>
-            <h3 class="h4 mb-2">Made with Love</h3>
-            <p class="text-muted mb-0">Is it really open source if it's not made with love?</p>
+            <i class="fas fa-4x fa-cog text-primary mb-4"></i>
+            <h3 class="h4 mb-2">Sensors</h3>
+            <p class="text-muted mb-0">ADCPs, CTDs, <i>x</i>-pods, Thermistors, SeaSoar</p>
           </div>
         </div>
       </div>
