--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-lg-8 text-center">
-          <h2 class="text-white mt-0">We've got what you need!</h2>
+          <h2 class="text-white mt-0">Who Am I?</h2>
           <hr class="divider light my-4">
-          <p class="text-white-50 mb-4">blah blah blah blah</p>
+          <p class="text-white-50 mb-4">I am a data analyst for the Oceanographic Data Facilities (ODF) group at the Scripps Institution of Oceanography (UC San Diego).</p>
           <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Get Started!</a>
         </div>
       </div>
@@ -195,6 +195,7 @@
             </div>
           </a>
         </div>
+        <!--add more by copying this block-->
         <div class="col-lg-4 col-sm-6">
           <a class="portfolio-box" href="img/portfolio/fullsize/6.jpg">
             <img class="img-fluid" src="img/portfolio/thumbnails/6.jpg" alt="">
@@ -208,6 +209,7 @@
             </div>
           </a>
         </div>
+        <!--up to here-->
       </div>
     </div>
   </section>
