attempting to update FA icons

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
   <title>Mike Kovatch</title>
 
   <!-- Font Awesome Icons -->
-  <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
+  <!-- <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css"> -->
+  <script src="https://kit.fontawesome.com/ea48578db3.js" crossorigin="anonymous"></script>
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700" rel="stylesheet">
@@ -103,7 +104,7 @@
         </div>
         <div class="col-lg-3 col-md-6 text-center">
           <div class="mt-5">
-            <i class="fas fa-4x fa-code text-primary mb-4"></i>
+            <i class="fas fa-4x fa-flickr text-primary mb-4"></i>
             <h3 class="h4 mb-2">Coding</h3>
             <p class="text-muted mb-0">Python, MATLAB, Unix, Git, GitHub, LaTeX</p>
           </div>
