--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
   <title>Mike Kovatch</title>
 
   <!-- Font Awesome Icons -->
-  <!-- <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css"> -->
-  <script src="https://kit.fontawesome.com/ea48578db3.js" crossorigin="anonymous"></script>
+  <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700" rel="stylesheet">
@@ -80,9 +79,9 @@
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-lg-8 text-center">
-          <h2 class="text-white mt-0">We've got what you need!</h2>
+          <h2 class="text-white mt-0">Who Am I?</h2>
           <hr class="divider light my-4">
-          <p class="text-white-50 mb-4">blah blah blah blah</p>
+          <p class="text-white-50 mb-4">I am a data analyst for the Oceanographic Data Facilities (ODF) group at the Scripps Institution of Oceanography (UC San Diego).</p>
           <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Get Started!</a>
         </div>
       </div>
@@ -104,7 +103,7 @@
         </div>
         <div class="col-lg-3 col-md-6 text-center">
           <div class="mt-5">
-            <i class="fas fa-4x fa-flickr text-primary mb-4"></i>
+            <i class="fas fa-4x fa-code text-primary mb-4"></i>
             <h3 class="h4 mb-2">Coding</h3>
             <p class="text-muted mb-0">Python, MATLAB, Unix, Git, GitHub, LaTeX</p>
           </div>
@@ -196,6 +195,7 @@
             </div>
           </a>
         </div>
+        <!--add more by copying this block-->
         <div class="col-lg-4 col-sm-6">
           <a class="portfolio-box" href="img/portfolio/fullsize/6.jpg">
             <img class="img-fluid" src="img/portfolio/thumbnails/6.jpg" alt="">
@@ -209,6 +209,7 @@
             </div>
           </a>
         </div>
+        <!--up to here-->
       </div>
     </div>
   </section>
