--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
             <a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="https://flickr.com/photos/mkovatch/">Flickr</a>
+            <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
+            <a class="nav-link js-scroll-trigger" href="#social">Social</a>
           </li>
         </ul>
       </div>
@@ -233,14 +233,50 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-lg-4 ml-auto text-center mb-5 mb-lg-0">
-          <i class="fas fa-phone fa-3x mb-3 text-muted"></i>
+        <!-- <div class="col-lg-4 ml-auto text-center mb-5 mb-lg-0">
+          <i class="fab fa-flickr fa-3x mb-3 text-muted"></i>
           <div>+1 (202) 555-0149</div>
-        </div>
-        <div class="col-lg-4 mr-auto text-center">
+        </div> -->
+        <div class="col-lg-4 m-auto text-center">
           <i class="fas fa-envelope fa-3x mb-3 text-muted"></i>
           <!-- Make sure to change the email address in anchor text AND the link below! -->
-          <a class="d-block" href="mailto:contact@yourwebsite.com">contact@yourwebsite.com</a>
+          <a class="d-block" href="mailto:mvkovatch3@gmail.com">mvkovatch3@gmail.com</a>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Social Media -->
+  <section class="page-section bg-dark text-white" id="social">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-lg-8 text-center">
+          <h2 class="mt-0">Social Media</h2>
+          <hr class="divider my-4">
+          <p class="text-muted mb-5"></p>
+        </div>
+      </div>
+      <div class="row">
+        <!-- <div class="col-lg-4 ml-auto text-center mb-5 mb-lg-0"> -->
+        <div class="col-lg-3 col-md-6 text-center">
+          <a class="nav-link" href="https://flickr.com/photos/mkovatch/">
+            <i class="fab fa-flickr fa-4x mb-3"></i>
+          </a>
+        </div>
+        <div class="col-lg-3 col-md-6 text-center">
+          <a class="nav-link" href="https://www.linkedin.com/in/mike-kovatch-2119a3104">
+            <i class="fab fa-linkedin fa-4x mb-3"></i>
+          </a>
+        </div>
+        <div class="col-lg-3 col-md-6 text-center">
+          <a class="nav-link" href="https://github.com/mvkovatch3/">
+            <i class="fab fa-github fa-4x mb-3"></i>
+          </a>
+        </div>
+        <div class="col-lg-3 col-md-6 text-center">
+          <a class="nav-link" href="https://github.com/mvkovatch3/">
+            <i class="fab fa-instagram fa-4x mb-3"></i>
+          </a>
         </div>
       </div>
     </div>
