clean up vertical whitespace (edit .css then minify)

--- a/index.html
+++ b/index.html
@@ -215,15 +215,15 @@
   </section>
 
   <!-- Call to Action Section -->
-  <section class="page-section bg-dark text-white">
+  <aside class="bg-dark text-white">
     <div class="container text-center">
       <h2 class="mb-4">Check out my blog chronicling life at sea</h2>
       <a class="btn btn-light btn-xl" href="https://startbootstrap.com/themes/creative/">Go to blog!</a>
     </div>
-  </section>
+  </aside>
 
   <!-- Contact Section -->
-  <section class="page-section" id="contact">
+  <aside id="contact">
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-lg-8 text-center">
@@ -244,10 +244,10 @@
         </div>
       </div>
     </div>
-  </section>
+  </aside>
 
   <!-- Social Media -->
-  <section class="page-section bg-dark text-white" id="social">
+  <aside class="bg-dark text-white" id="social">
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-lg-8 text-center">
@@ -280,7 +280,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </aside>
 
   <!-- Footer -->
   <footer class="bg-light py-5">
