--- a/index.html
+++ b/index.html
@@ -127,76 +127,111 @@
   </section>
 
   <!-- Portfolio Section -->
+  <!-- be sure to update links and text -->
   <section id="portfolio">
     <div class="container-fluid p-0">
       <div class="row no-gutters">
+        <!-- 
+          Picture link 1
+         -->
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/portfolio/fullsize/1.jpg">
-            <img class="img-fluid" src="img/portfolio/thumbnails/1.jpg" alt="">
+          <a href="https://www.flickr.com/photos/mkovatch/albums/72157713311472163" class="portfolio-box">
+            <img src="img/portfolio/thumbnails/1.jpg" class="img-fluid" alt="">
             <div class="portfolio-box-caption">
-              <div class="project-category text-white-50">
-                Category
-              </div>
-              <div class="project-name">
-                Project Name
-              </div>
+                <div class="portfolio-box-caption-content">
+                    <div class="project-category text-white-50">
+                        Pancake Ice (2019)
+                    </div>
+                    <div class="project-name">
+                        GO-SHIP Cruise I06S <br> <p style=font-size:10px;">(South Africa to Antarctica)</p>
+                    </div>
+                </div>
             </div>
-          </a>
+        </a>
         </div>
+        <!-- 
+          Picture link 2
+         -->
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/portfolio/fullsize/2.jpg">
-            <img class="img-fluid" src="img/portfolio/thumbnails/2.jpg" alt="">
+          <a href="https://www.flickr.com/photos/mkovatch/albums/72157713311472163" class="portfolio-box">
+            <img src="img/portfolio/thumbnails/2.jpg" class="img-fluid" alt="">
             <div class="portfolio-box-caption">
-              <div class="project-category text-white-50">
-                Category
-              </div>
-              <div class="project-name">
-                Project Name
-              </div>
+                <div class="portfolio-box-caption-content">
+                    <div class="project-category text-white-50">
+                        Canyonlands National Park (2018)
+                    </div>
+                    <div class="project-name">
+                        Travel Photography
+                    </div>
+                </div>
             </div>
-          </a>
+        </a>
         </div>
+        <!-- 
+          Picture link 3
+         -->
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/portfolio/fullsize/3.jpg">
-            <img class="img-fluid" src="img/portfolio/thumbnails/3.jpg" alt="">
+          <a href="https://www.flickr.com/photos/mkovatch/albums/72157713311472163" class="portfolio-box">
+            <img src="img/portfolio/thumbnails/3.jpg" class="img-fluid" alt="">
             <div class="portfolio-box-caption">
-              <div class="project-category text-white-50">
-                Category
-              </div>
-              <div class="project-name">
-                Project Name
-              </div>
+                <div class="portfolio-box-caption-content">
+                    <div class="project-category text-white-50">
+                        Braided Challah (2018)
+                    </div>
+                    <div class="project-name">
+                        Food Photography
+                    </div>
+                </div>
             </div>
-          </a>
+        </a>
         </div>
+        <!-- 
+          Picture link 4
+         -->
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/portfolio/fullsize/4.jpg">
-            <img class="img-fluid" src="img/portfolio/thumbnails/4.jpg" alt="">
+          <a class="portfolio-box">
+            <img src="img/portfolio/thumbnails/4.jpg" class="img-fluid" alt="">
             <div class="portfolio-box-caption">
-              <div class="project-category text-white-50">
-                Category
-              </div>
-              <div class="project-name">
-                Project Name
-              </div>
+                <div class="portfolio-box-caption-content">
+                    <div class="project-category text-white-50">
+                        Johua Tree National Park (2018)
+                    </div>
+                </div>
             </div>
-          </a>
+        </a>
         </div>
+        <!-- 
+          Picture link 5
+         -->
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/portfolio/fullsize/5.jpg">
-            <img class="img-fluid" src="img/portfolio/thumbnails/5.jpg" alt="">
+          <a href="https://www.flickr.com/photos/mkovatch/albums/72157713311472163" class="portfolio-box">
+            <img src="img/portfolio/thumbnails/5.jpg" class="img-fluid" alt="">
             <div class="portfolio-box-caption">
-              <div class="project-category text-white-50">
-                Category
-              </div>
-              <div class="project-name">
-                Project Name
-              </div>
+                <div class="portfolio-box-caption-content">
+                    <div class="project-category text-white-50">
+                        Glass Guild Vases (2017)
+                    </div>
+                </div>
             </div>
-          </a>
+        </a>
+        </div>
+        <!-- 
+          Picture link 6
+         -->
+        <div class="col-lg-4 col-sm-6">
+          <a href="https://www.flickr.com/photos/mkovatch/albums/72157713311472163" class="portfolio-box">
+            <img src="img/portfolio/thumbnails/6.jpg" class="img-fluid" alt="">
+            <div class="portfolio-box-caption">
+                <div class="portfolio-box-caption-content">
+                    <div class="project-category text-white-50">
+                        Snowy Woodpile (2017)
+                    </div>
+                </div>
+            </div>
+        </a>
         </div>
         <!--add more by copying this block-->
-        <div class="col-lg-4 col-sm-6">
+        <!-- <div class="col-lg-4 col-sm-6">
           <a class="portfolio-box" href="img/portfolio/fullsize/6.jpg">
             <img class="img-fluid" src="img/portfolio/thumbnails/6.jpg" alt="">
             <div class="portfolio-box-caption p-3">
@@ -208,7 +243,7 @@
               </div>
             </div>
           </a>
-        </div>
+        </div> -->
         <!--up to here-->
       </div>
     </div>
