change portfolio folder name and add project-subtitle tag

--- a/index.html
+++ b/index.html
@@ -136,14 +136,17 @@
          -->
         <div class="col-lg-4 col-sm-6">
           <a href="https://www.flickr.com/photos/mkovatch/albums/72157713311472163" class="portfolio-box">
-            <img src="img/portfolio/thumbnails/1.jpg" class="img-fluid" alt="">
+            <img src="img/portfolio/images/1.jpg" class="img-fluid" alt="">
             <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                     <div class="project-category text-white-50">
                         Pancake Ice (2019)
                     </div>
                     <div class="project-name">
-                        GO-SHIP Cruise I06S <br> <p style=font-size:10px;">(South Africa to Antarctica)</p>
+                        GO-SHIP Cruise I06S
+                    </div>
+                    <div class="project-subtitle text-white-75">
+                      South Africa to Antarctica
                     </div>
                 </div>
             </div>
@@ -154,7 +157,7 @@
          -->
         <div class="col-lg-4 col-sm-6">
           <a href="https://www.flickr.com/photos/mkovatch/albums/72157713311472163" class="portfolio-box">
-            <img src="img/portfolio/thumbnails/2.jpg" class="img-fluid" alt="">
+            <img src="img/portfolio/images/2.jpg" class="img-fluid" alt="">
             <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                     <div class="project-category text-white-50">
@@ -172,7 +175,7 @@
          -->
         <div class="col-lg-4 col-sm-6">
           <a href="https://www.flickr.com/photos/mkovatch/albums/72157713311472163" class="portfolio-box">
-            <img src="img/portfolio/thumbnails/3.jpg" class="img-fluid" alt="">
+            <img src="img/portfolio/images/3.jpg" class="img-fluid" alt="">
             <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                     <div class="project-category text-white-50">
@@ -190,7 +193,7 @@
          -->
         <div class="col-lg-4 col-sm-6">
           <a class="portfolio-box">
-            <img src="img/portfolio/thumbnails/4.jpg" class="img-fluid" alt="">
+            <img src="img/portfolio/images/4.jpg" class="img-fluid" alt="">
             <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                     <div class="project-category text-white-50">
@@ -205,7 +208,7 @@
          -->
         <div class="col-lg-4 col-sm-6">
           <a href="https://www.flickr.com/photos/mkovatch/albums/72157713311472163" class="portfolio-box">
-            <img src="img/portfolio/thumbnails/5.jpg" class="img-fluid" alt="">
+            <img src="img/portfolio/images/5.jpg" class="img-fluid" alt="">
             <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                     <div class="project-category text-white-50">
@@ -220,7 +223,7 @@
          -->
         <div class="col-lg-4 col-sm-6">
           <a href="https://www.flickr.com/photos/mkovatch/albums/72157713311472163" class="portfolio-box">
-            <img src="img/portfolio/thumbnails/6.jpg" class="img-fluid" alt="">
+            <img src="img/portfolio/images/6.jpg" class="img-fluid" alt="">
             <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                     <div class="project-category text-white-50">
@@ -233,7 +236,7 @@
         <!--add more by copying this block-->
         <!-- <div class="col-lg-4 col-sm-6">
           <a class="portfolio-box" href="img/portfolio/fullsize/6.jpg">
-            <img class="img-fluid" src="img/portfolio/thumbnails/6.jpg" alt="">
+            <img class="img-fluid" src="img/portfolio/images/6.jpg" alt="">
             <div class="portfolio-box-caption p-3">
               <div class="project-category text-white-50">
                 Category
