updated links, removed footer

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
           Picture link 2
          -->
         <div class="col-lg-4 col-sm-6">
-          <a href="https://www.flickr.com/photos/mkovatch/albums/72157713311472163" class="portfolio-box">
+          <a href="https://www.flickr.com/photos/mkovatch/albums/72157713321312551" class="portfolio-box">
             <img src="img/portfolio/images/2.jpg" class="img-fluid" alt="">
             <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
@@ -174,7 +174,7 @@
           Picture link 3
          -->
         <div class="col-lg-4 col-sm-6">
-          <a href="https://www.flickr.com/photos/mkovatch/albums/72157713311472163" class="portfolio-box">
+          <a href="https://www.flickr.com/photos/mkovatch/albums/72157713322712412" class="portfolio-box">
             <img src="img/portfolio/images/3.jpg" class="img-fluid" alt="">
             <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
@@ -197,7 +197,7 @@
             <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                     <div class="project-category text-white-50">
-                        Johua Tree National Park (2018)
+                        Joshua Tree National Park (2018)
                     </div>
                 </div>
             </div>
@@ -207,7 +207,7 @@
           Picture link 5
          -->
         <div class="col-lg-4 col-sm-6">
-          <a href="https://www.flickr.com/photos/mkovatch/albums/72157713311472163" class="portfolio-box">
+          <a  class="portfolio-box">
             <img src="img/portfolio/images/5.jpg" class="img-fluid" alt="">
             <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
@@ -222,7 +222,7 @@
           Picture link 6
          -->
         <div class="col-lg-4 col-sm-6">
-          <a href="https://www.flickr.com/photos/mkovatch/albums/72157713311472163" class="portfolio-box">
+          <a class="portfolio-box">
             <img src="img/portfolio/images/6.jpg" class="img-fluid" alt="">
             <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
@@ -256,7 +256,7 @@
   <aside class="bg-dark text-white">
     <div class="container text-center">
       <h2 class="mb-4">Check out my blog chronicling life at sea</h2>
-      <a class="btn btn-light btn-xl" href="https://startbootstrap.com/themes/creative/">Go to blog!</a>
+      <a class="btn btn-light btn-xl" href="">Go to blog!</a>
     </div>
   </aside>
 
@@ -321,11 +321,11 @@
   </aside>
 
   <!-- Footer -->
-  <footer class="bg-light py-5">
+  <!-- <footer class="bg-light py-5">
     <div class="container">
       <div class="small text-center text-muted">Copyright &copy; 2019 - Start Bootstrap</div>
     </div>
-  </footer>
+  </footer> -->
 
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
