update instagram link, remove button from about section

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           <h2 class="text-white mt-0">Who Am I?</h2>
           <hr class="divider light my-4">
           <p class="text-white-50 mb-4">I am a data analyst for the Oceanographic Data Facilities (ODF) group at the Scripps Institution of Oceanography (UC San Diego).</p>
-          <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Get Started!</a>
+          <!-- <a class="btn btn-light btn-xl js-scroll-trigger" href="#skills">Skills</a> -->
         </div>
       </div>
     </div>
@@ -312,7 +312,7 @@
           </a>
         </div>
         <div class="col-lg-3 col-md-6 text-center">
-          <a class="nav-link" href="https://github.com/mvkovatch3/">
+          <a class="nav-link" href="https://www.instagram.com/michael_kovatch/">
             <i class="fab fa-instagram fa-4x mb-3"></i>
           </a>
         </div>
