--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
   <aside class="bg-dark text-white">
     <div class="container text-center">
       <h2 class="mb-4">Check out my blog chronicling life at sea</h2>
-      <a class="btn btn-light btn-xl" href="">Go to blog!</a>
+      <a class="btn btn-light btn-xl" href="https://mvkovatch3.blogspot.com/">Go to blog!</a>
     </div>
   </aside>
 
