update masthead text

--- a/index.html
+++ b/index.html
@@ -63,11 +63,9 @@
         <div class="col-lg-10 align-self-end">
           <h1 class="text-uppercase text-white font-weight-bold">Hydrographic Data Analyst</h1>
           <hr class="divider my-4">
-          <h1 class="text-uppercase text-white font-weight-bold">Physical Oceanography</h1>
-          <hr class="divider my-4">
         </div>
         <div class="col-lg-8 align-self-baseline">
-          <p class="text-white-75 font-weight-light mb-5">blah blah blah</p>
+          <p class="text-white-75 font-weight-light mb-5">Working in physical oceanography at Scripps Institution of Oceanography in San Diego, California. </p>
           <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">About ME</a>
         </div>
       </div>
