fix skills link, add copywrite at bottom

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
   </section>
 
   <!-- Services Section -->
-  <section class="page-section" id="Skills">
+  <section class="page-section" id="skills">
     <div class="container">
       <h2 class="text-center mt-0">Technical Skills</h2>
       <hr class="divider my-4">
@@ -319,11 +319,11 @@
   </aside>
 
   <!-- Footer -->
-  <!-- <footer class="bg-light py-5">
+  <footer class="bg-light py-5">
     <div class="container">
-      <div class="small text-center text-muted">Copyright &copy; 2019 - Start Bootstrap</div>
+      <div class="small text-center text-muted">Copyright &copy; 2020 - Mike Kovatch</div>
     </div>
-  </footer> -->
+  </footer>
 
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
